image prediction definitivo

--- a/src/image_prediction.ipynb
+++ b/src/image_prediction.ipynb
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -867,22 +867,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2020-10-14 14:24:23--  https://www.hola.com/imagenes/cocina/recetas/20190710145612/tacos-ternera-queso-espinacas/0-700-318/tacos-ternera-m.jpg\n",
-      "Resolving www.hola.com (www.hola.com)... 23.216.99.97\n",
-      "Connecting to www.hola.com (www.hola.com)|23.216.99.97|:443... connected.\n",
+      "--2020-10-14 14:54:18--  https://dam.cocinafacil.com.mx/wp-content/uploads/2019/08/tacos-de-mixiote.jpg\n",
+      "Resolving dam.cocinafacil.com.mx (dam.cocinafacil.com.mx)... 2600:9000:2042:ac00:11:15a:7280:93a1, 2600:9000:2042:f200:11:15a:7280:93a1, 2600:9000:2042:b800:11:15a:7280:93a1, ...\n",
+      "Connecting to dam.cocinafacil.com.mx (dam.cocinafacil.com.mx)|2600:9000:2042:ac00:11:15a:7280:93a1|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 262581 (256K) [image/jpeg]\n",
+      "Length: 162341 (159K) [image/jpeg]\n",
       "Saving to: ‘downloads/image.jpg’\n",
       "\n",
-      "downloads/image.jpg 100%[===================>] 256,43K  --.-KB/s    in 0,08s   \n",
+      "downloads/image.jpg 100%[===================>] 158,54K  --.-KB/s    in 0,02s   \n",
       "\n",
-      "2020-10-14 14:24:24 (2,97 MB/s) - ‘downloads/image.jpg’ saved [262581/262581]\n",
+      "2020-10-14 14:54:18 (6,70 MB/s) - ‘downloads/image.jpg’ saved [162341/162341]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "!wget -O downloads/image.jpg https://www.hola.com/imagenes/cocina/recetas/20190710145612/tacos-ternera-queso-espinacas/0-700-318/tacos-ternera-m.jpg"
+    "!wget -O downloads/image.jpg https://dam.cocinafacil.com.mx/wp-content/uploads/2019/08/tacos-de-mixiote.jpg"
    ]
   },
   {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +946,7 @@
        "'tacos'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,6 +961,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
